--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,8 @@
-body {
-    .side-bar { display: none; }
+.side-bar {
+    display: none;
+}
+
+#top.main {
+    margin-left: auto;
+    margin-right: auto;
 }
