--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,7 @@
+body {
+    color: #27262b;
+}
+
 .side-bar {
     display: none;
 }
@@ -5,4 +9,37 @@
 #top.main {
     margin-left: auto;
     margin-right: auto;
+}
+
+.textbox {
+    border-top: 1px solid #27262b;
+    font-style: italic;
+}
+
+.textbox p:nth-child(1), .textbox p:nth-child(2) {
+    line-height: 0;
+}
+
+.textbox p:nth-child(1) {
+    float: left;
+}
+
+.textbox p:nth-child(2) {
+    float: right;
+}
+
+.textbox div {
+    clear: both;
+}
+
+.alignleft {
+	float: left;
+}
+
+.alignright {
+	float: right;
+}
+
+.clear {
+    clear: both;
 }
